--- a/.github/workflows/jobs.yml
+++ b/.github/workflows/jobs.yml
@@ -6,14 +6,14 @@ on:
       - master
 
 env:
-  COVERALLS_REPO_TOKEN: ${{ secrets.GITHUB_TOKEN }}
+  # COVERALLS_REPO_TOKEN: ${{ secrets.GITHUB_TOKEN }}
 
   ENVIRONMENT: test
   VERBOSE: true
   TERM: xterm
 
   DEEPLY_JOBS_GITHUB_USERNAME: achillesrasquinha
-  DEEPLY_JOBS_GITHUB_OAUTH_TOKEN: ${{ secrets.DEEPLY_JOBS_GITHUB_OAUTH_TOKEN }}
+  # DEEPLY_JOBS_GITHUB_OAUTH_TOKEN: ${{ secrets.DEEPLY_JOBS_GITHUB_OAUTH_TOKEN }}
 
 jobs:
   jobs:
