feat: make deeply byutil compat

--- a/requirements-dev.txt
+++ b/requirements-dev.txt
@@ -26,7 +26,7 @@ pylibjpeg-libjpeg
 seaborn
 scikit-learn
 git+git://github.com/achillesrasquinha/bpyutils.git@develop#egg=bpyutils
-numpy<=1.19.3
+numpy==1.19.3
 six<=1.16.0
 typing-extensions<=3.7.4
 absl-py<0.13
