--- a/requirements-dev.txt
+++ b/requirements-dev.txt
@@ -1,6 +1,5 @@
 sphinx
 recommonmark
-<<<<<<< HEAD
 ipykernel
 nbsphinx
 matplotlib
@@ -8,11 +7,6 @@ pydot
 pydotplus
 pydot-ng
 graphviz
-=======
-
-ipykernel
-nbsphinx
->>>>>>> template/master
 pylint
 autopep8
 pytest
@@ -22,14 +16,13 @@ pytest-sugar
 tox
 coveralls
 pluggy<1,>=0.12.0
-<<<<<<< HEAD
 tensorflow
 tensorflow-datasets
 imgaug
 pillow
-pydicom
-pylibjpeg
-pylibjpeg-libjpeg
+# pydicom
+# pylibjpeg
+# pylibjpeg-libjpeg
 seaborn
 scikit-learn
 git+git://github.com/achillesrasquinha/bpyutils.git@develop#egg=bpyutils
@@ -37,10 +30,6 @@ numpy==1.19.3
 six<=1.16.0
 typing-extensions<=3.7.4
 absl-py<0.13
-=======
-
-git+git://github.com/achillesrasquinha/bpyutils.git@develop#egg=bpyutils
->>>>>>> template/master
 pipenv
 jedi<0.18
 ipython
@@ -49,11 +38,5 @@ vulture
 safety
 pre-commit
 twine
-<<<<<<< HEAD
 jupyter
-=======
-
-jupyter
-
->>>>>>> template/master
 Flask
