--- a/requirements-dev.txt
+++ b/requirements-dev.txt
@@ -1,3 +1,13 @@
+pipenv
+jedi<0.18
+ipython
+bumpversion
+vulture
+safety
+pre-commit
+twine
+jupyter
+Flask
 sphinx
 recommonmark
 ipykernel
@@ -8,8 +18,7 @@ pydotplus
 pydot-ng
 graphviz
 sphinx-autobuild
-pylint
-autopep8
+sphinx-press-theme
 pytest
 pytest-cov
 pytest-xdist
@@ -32,13 +41,5 @@ numpy==1.19.3
 six<=1.16.0
 typing-extensions<=3.7.4
 absl-py<0.13
-pipenv
-jedi<0.18
-ipython
-bumpversion
-vulture
-safety
-pre-commit
-twine
-jupyter
-Flask
+pylint
+autopep8
