--- a/requirements-dev.txt
+++ b/requirements-dev.txt
@@ -19,7 +19,7 @@ tox
 coveralls
 pluggy<1,>=0.12.0
 docstr-coverage
-tensorflow-aarch64
+tensorflow-aarch64<2.8
 tensorflow-datasets
 imgaug
 pillow
@@ -28,11 +28,12 @@ pillow
 # pylibjpeg-libjpeg
 seaborn
 scikit-learn
-git+git://github.com/achillesrasquinha/bpyutils.git@develop#egg=bpyutils
+bpyutils
 numpy==1.19.3
 six<=1.16.0
 typing-extensions<=3.7.4
 absl-py<0.13
+pydot
 pipenv
 jedi<0.18
 ipython
