--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -19,7 +19,7 @@ jobs:
       fail-fast: false
       matrix:
         os: [ubuntu-latest, macos-latest, windows-latest]
-        python-version: [3.6, 3.7, 3.8, 3.9] # Removed 2.7, 3.5 since NumPy 1.19.1 supports 3.6 to 3.8.
+        python-version: [3.7, 3.8, 3.9] # Removed 2.7, 3.5 since NumPy 1.19.1 supports 3.6 to 3.8., Removed 3.6, since TFlow + sklearn supports 3.7 onwards.
 
     steps:
       - uses: actions/checkout@v2
