--- a/requirements-dev.txt
+++ b/requirements-dev.txt
@@ -20,7 +20,8 @@ tox
 coveralls
 pluggy<1,>=0.12.0
 docstr-coverage
-tensorflow
+# tensorflow
+https://github.com/diyor28/tf-docker-m1/releases/download/v1.0.0/tensorflow-2.8.0-cp39-cp39-linux_aarch64.whl
 tensorflow-datasets
 imgaug
 pillow
