--- a/requirements.txt
+++ b/requirements.txt
@@ -1,5 +1,4 @@
-# tensorflow
-https://github.com/diyor28/tf-docker-m1/releases/download/v1.0.0/tensorflow-2.8.0-cp39-cp39-linux_aarch64.whl
+tensorflow-aarch64
 tensorflow-datasets
 imgaug
 pillow
