--- a/requirements.txt
+++ b/requirements.txt
@@ -7,5 +7,5 @@ pillow
 # pylibjpeg-libjpeg
 seaborn
 scikit-learn
-bpyutils
+git+https://github.com/achillesrasquinha/bpyutils@develop#egg=bpyutils
 pydot
