ci: fix tflow-m1

--- a/.github/workflows/docker.yml
+++ b/.github/workflows/docker.yml
@@ -30,7 +30,7 @@ jobs:
           make docker-pull
       - name: Build Image
         run: |
-          export DOCKER_TAG=$(echo ${GITHUB_REF#refs/heads/)
+          export DOCKER_TAG=${GITHUB_REF##*/}
           make docker-build
       - name: Push Image
         run: |
