--- a/requirements-jobs.txt
+++ b/requirements-jobs.txt
@@ -1,3 +1,23 @@
+tensorflow
+tensorflow-datasets
+imgaug
+pillow
+# pydicom
+# pylibjpeg
+# pylibjpeg-libjpeg
+seaborn
+scikit-learn
+git+https://github.com/achillesrasquinha/bpyutils@develop#egg=bpyutils
+pydot
+pytest
+pytest-cov
+pytest-xdist
+pytest-sugar
+pytest-clarity; python_version >= '3.6'
+tox
+coveralls
+pluggy<1,>=0.12.0
+docstr-coverage
 sphinx
 recommonmark
 ipykernel
@@ -9,28 +29,6 @@ pydot-ng
 graphviz
 sphinx-autobuild
 sphinx-press-theme
-pylint
-autopep8
-pytest
-pytest-cov
-pytest-xdist
-pytest-sugar
-pytest-clarity; python_version >= '3.6'
-tox
-coveralls
-pluggy<1,>=0.12.0
-docstr-coverage
-tensorflow
-tensorflow-datasets
-imgaug
-pillow
-# pydicom
-# pylibjpeg
-# pylibjpeg-libjpeg
-seaborn
-scikit-learn
-bpyutils
-pydot
 pipenv
 jedi<0.18
 ipython
@@ -41,3 +39,5 @@ pre-commit
 twine
 jupyter
 Flask
+pylint
+autopep8
