--- a/requirements-dev.txt
+++ b/requirements-dev.txt
@@ -7,7 +7,7 @@ pillow
 # pylibjpeg-libjpeg
 seaborn
 scikit-learn
-git+https://github.com/achillesrasquinha/bpyutils@develop#egg=bpyutils
+git+https://github.com/achillesrasquinha/bpyutils.git@develop#egg=bpyutils
 pydot
 pytest
 pytest-cov
