feat: add gan generator

--- a/.gitignore
+++ b/.gitignore
@@ -175,7 +175,8 @@ pip-selfcheck.json
 
 # End of https://www.gitignore.io/api/python
 
-~/tensorflow_datasets
+tensorflow_datasets
 **/*.h5d5*
 docs/source/models/*.png
+docs/source/models/*.gif
 checkpoint
