feat: add bpyutils

--- a/requirements-dev.txt
+++ b/requirements-dev.txt
@@ -1,23 +1,3 @@
-tensorflow
-tensorflow-datasets
-imgaug
-pillow
-# pydicom
-# pylibjpeg
-# pylibjpeg-libjpeg
-seaborn
-scikit-learn
-bpyutils
-pydot
-pytest
-pytest-cov
-pytest-xdist
-pytest-sugar
-pytest-clarity; python_version >= '3.6'
-tox
-coveralls
-pluggy<1,>=0.12.0
-docstr-coverage
 sphinx
 recommonmark
 ipykernel
@@ -29,6 +9,28 @@ pydot-ng
 graphviz
 sphinx-autobuild
 sphinx-press-theme
+pylint
+autopep8
+pytest
+pytest-cov
+pytest-xdist
+pytest-sugar
+pytest-clarity; python_version >= '3.6'
+tox
+coveralls
+pluggy<1,>=0.12.0
+docstr-coverage
+tensorflow
+tensorflow-datasets
+imgaug
+pillow
+# pydicom
+# pylibjpeg
+# pylibjpeg-libjpeg
+seaborn
+scikit-learn
+git+https://github.com/achillesrasquinha/bpyutils.git@develop#egg=bpyutils
+pydot
 pipenv
 jedi<0.18
 ipython
@@ -39,5 +41,3 @@ pre-commit
 twine
 jupyter
 Flask
-pylint
-autopep8
