--- a/requirements-jobs.txt
+++ b/requirements-jobs.txt
@@ -20,7 +20,7 @@ tox
 coveralls
 pluggy<1,>=0.12.0
 docstr-coverage
-tensorflow-aarch64
+tensorflow
 tensorflow-datasets
 imgaug
 pillow
@@ -31,6 +31,8 @@ seaborn
 scikit-learn
 bpyutils
 pydot
+dask
+dask-ml
 pipenv
 jedi<0.18
 ipython
