--- a/requirements-jobs.txt
+++ b/requirements-jobs.txt
@@ -20,7 +20,7 @@ tox
 coveralls
 pluggy<1,>=0.12.0
 docstr-coverage
-tensorflow
+# tensorflow
 tensorflow-datasets
 imgaug
 pillow
@@ -29,7 +29,7 @@ pillow
 # pylibjpeg-libjpeg
 seaborn
 scikit-learn
-git+https://github.com/achillesrasquinha/bpyutils@develop#egg=bpyutils
+# git+https://github.com/achillesrasquinha/bpyutils@develop#egg=bpyutils
 pydot
 dask
 dask-ml
