--- a/requirements.txt
+++ b/requirements.txt
@@ -1,4 +1,4 @@
-tensorflow
+# tensorflow
 tensorflow-datasets
 imgaug
 pillow
@@ -7,7 +7,7 @@ pillow
 # pylibjpeg-libjpeg
 seaborn
 scikit-learn
-git+https://github.com/achillesrasquinha/bpyutils@develop#egg=bpyutils
+# git+https://github.com/achillesrasquinha/bpyutils@develop#egg=bpyutils
 pydot
 dask
 dask-ml
